@@ -7,7 +7,6 @@ import org.firstinspires.ftc.teamcode.dynamicsLibrary.UscOpMode;
 import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.CombinedInstruction;
 import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.DriveEasier;
 import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.Instruction;
-import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.Log;
 import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.SeriesInstruction;
 import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.SetArmAngle;
 import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.SetArmLength;
@@ -16,7 +15,7 @@ import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.SetTurn;
 import org.firstinspires.ftc.teamcode.dynamicsLibrary.auto.Wait;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 @SuppressWarnings("unused")
 @Autonomous
@@ -29,104 +28,39 @@ public class AutoCrusher2_0 extends UscOpMode {
         armPivot.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
         armSlide.setMode(DcMotor.RunMode.STOP_AND_RESET_ENCODER);
 
-        ArrayList<Instruction> instructions = new ArrayList<>(Arrays.asList(//First Sample
+        ArrayList<Instruction> instructions = new ArrayList<>(List.of(
             new CombinedInstruction(new Instruction[]{
-                new SetClaw(false),
-                new Log("Go to bar and score sample"),
-                new SetClaw(false),
-                new SetArmAngle(13),
-                new SetArmLength(16),
-
+                new DriveEasier(1230, -400),
+                new SetTurn(Math.PI),
                 new SeriesInstruction(new Instruction[]{
-                    new Wait(1000000000),
-                    new DriveEasier(625, 0),
-                })
-            }),
-
-            new CombinedInstruction(new Instruction[]{
-                new SetClaw(true),
-                new SetArmLength(0),
-
-                new Log("Setup pushing"),
-                new SetArmAngle(0),
-                new SeriesInstruction(new Instruction[]{
-                    new Wait(750000000),
-                    new DriveEasier(0, -680),
-                    new DriveEasier(675, 0)
-                })
-            }),
-
-            new SeriesInstruction(new Instruction[]{
-                new Log("Push sample 1"),
-                new DriveEasier(0, -225),
-                new DriveEasier(-1100, 0),
-                new DriveEasier(970, 0)
-            }),
-
-            new SeriesInstruction(new Instruction[]{
-                new Log("Push sample 2"),
-                new CombinedInstruction(new Instruction[]{
-                        new SetTurn(Math.PI),
-                        new DriveEasier(0, -250),
-                }),
-                new DriveEasier(-1030, 0),
-                new Log("Drive to the specimen"),
-                new DriveEasier(0, 320),
-            }),
-
-            //Second Sample
-            new SeriesInstruction(new Instruction[]{
-                new CombinedInstruction(new Instruction[]{
-                    new Log("Position to grab specimen #2"),
-                    new SetArmAngle(6.5),
-                    new Wait((long) ((long) 5 * Math.pow(10, 8)))
-                }),
-
-                new SetClaw(false),
-                new SetArmAngle(14.5),
-
-                new CombinedInstruction(new Instruction[]{
-                    new Log("Prepare for scoring specimen #2"),
-                    new SetArmLength(16),
-                    new Log("Drive and score specimen #2"),
-                    new DriveEasier(620, 1050),
-                    new SetTurn(0),
-                }),
-
-                new CombinedInstruction(new Instruction[]{
-                    new Log("Drive back and reset for specimen #3"),
-                    new SetClaw(true),
-                    new SetArmLength(6),
-                    new DriveEasier(-600, -1000),
-                    new SetTurn(Math.PI),
+                    new Wait((long) (2 * Math.pow(10, 9))),
+                    new DriveEasier(-1150, -50),
                 })
             })
         ));
 
-        //Third and Fourth Sample
-        for (int i = 1; i <= 2; i++) {
+        for (int i = 0; i <= 2; i++) {
             instructions.add(
                 new SeriesInstruction(new Instruction[]{
                     new CombinedInstruction(new Instruction[]{
-                        new Log("Position to grab specimen # " + (i + 2)),
                         new SetArmAngle(6.5),
-                        new Wait((long) ((long) 5 * Math.pow(10, 8)))
+                        new SeriesInstruction(new Instruction[]{
+                            new Wait((long) (5 * Math.pow(10, 8))),
+                            new SetClaw(false),
+                            new SetArmAngle(14),
+                        })
                     }),
-
-                    new SetClaw(false),
-                    new SetArmAngle(14.5),
 
                     new CombinedInstruction(new Instruction[]{
                         new SetArmLength(16),
-                        new DriveEasier(600, (i * 105) + 800),
+                        new DriveEasier(602,1000),
                         new SetTurn(0),
                     }),
 
                     new CombinedInstruction(new Instruction[]{
-                        new Log("Drive back and reset for specimen# " + (i + 3)),
                         new SetClaw(true),
-                        new SetArmLength(6),
-                        new DriveEasier(-600 - ((i - 1) * 10), -((i * 100) + 750)),
+                        new SetArmLength(0),
+                        new DriveEasier(-602, -1020),
                         new SetTurn(Math.PI)
                     })
                 })
